syntax="proto3";

option java_package="com.proto.users";
option java_multiple_files=true;



message SignUpRequest{
  User user=1;
}
message SignUpResponse{
  string result=1;
}

message LogInRequest{
UserDetails UserDetails=1;
}

message LogInResponse{
	User user=1;
}

service UserServer{
  rpc SignUp(SignUpRequest) returns (SignUpResponse){};
  rpc LogIn(LogInRequest) returns (LogInResponse){};
}

message User{
  int32 userId=3;
  string name=1;
  int32 address_id=2;
  string email=4;
  string password=5;
  bool isFarmer=6;
}

message UserDetails{
	string email=1;
	string password=2;
}